--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Ejemplo 10</title>
-</head>
-<body>
-    Hola soy el ejemplo 10. 
-</body>
+  </head>
+  <body>
+    <header>
+        <h1>
+            <a href="./index.html">
+            Ejemplo 10
+            </a>
+        </h1>
+      
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+    </header>
+    <section id="busqueda">
+      <h2>Increíbles tours alrededor del mundo</h2>
+      <p>
+        Encuentra grandes experiencias, viajes y actividades a precios
+        fantásticos alrededor del mundo.
+      </p>
+      <input type="text" />
+      <button>Buscar</button>
+    </section>
+    <section id="lista-tours">
+      <article>
+        <a href="./cancun.html">
+            <img src="./img/cancun.jpg" alt="" />
+        </a>
+        
+        <a href="./cancun.html">
+            <h3>Cancún</h3>
+        </a>
+
+        <p>US$850</p>
+        <p>10 dìas</p>
+      </article>
+      <article>
+        <img src="./img/chiapas.jpg" alt="" />
+        <h3>Chiapas</h3>
+        <p>US$850</p>
+        <p>10 dìas</p>
+      </article>
+      <article>
+            <img src="./img/yucatan.jpg" alt="" />
+        <h3>Yucatán</h3>
+        <p>US$850</p>
+        <p>10 dìas</p>
+      </article>
+    </section>
+
+    <footer>
+      <p>Todos los derechos reservados.</p>
+    </footer>
+  </body>
 </html>
